# fnnas.pdfreader

./: .gitignore  README.md  build.sh  debug.sh  package-lock.json  test_run.sh
fnnas.pdfreader/: manifest
fnnas.pdfreader/app/ui/: config
fnnas.pdfreader/cmd/: config_callback  main
fnnas.pdfreader/config/: privilege  resource
pyservice/: pdfserver.py  pdfserver_flask.py  requirements.txt  test.py  test2.py  test_flask.py
rustservice/: Cargo.toml
rustservice/.cargo/: config.toml
rustservice/examples/: bench_extract.rs
rustservice/src/: main.rs
vueapp/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
vueapp/src/: App.vue  main.js
vueapp/src/assets/: main.css
vueapp/src/components/: Book.vue  Folder.vue  HistoryBook.vue  HomePage.vue  PdfReader.vue  PdfViewer.vue
vueapp/src/composables/: DataBean.ts
vueapp/src/router/: index.js
vueapp/src/utils/: UIUtils.ts  request.js  request.ts
