[package]
name = "pdfserver"
version = "3.0.0"
edition = "2021"
description = "PDF Reader backend (Rust) — pure-Rust lossless PDF page slicing over unix socket"

[[bin]]
name = "pdfserver"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
# lopdf：MIT/Apache-2.0，无损抽页（保留页面内容流 + 字体/XObject 资源）
lopdf = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
hex = "0.4"
libc = "0.2"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
