[package]
name = "pdfserver"
version = "3.0.0"
edition = "2021"
description = "PDF Reader backend (Rust) — pure-Rust PDF page extraction over unix socket"

[[bin]]
name = "pdfserver"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
# pdf_oxide：纯 Rust PDF 库（MIT/Apache-2.0），DocumentEditor 抽页返回独立单页文档
pdf_oxide = { version = "0.3", default-features = false, features = ["rendering"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
hex = "0.4"
libc = "0.2"
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
